# 2048_Game

./: CMakeLists.txt  README.md
include/: 2048.hpp  Moves.hpp
python/: 2048.py
src/: 2048.h  2048.hpp  main.cpp
test/: 2048Tests.cpp
